--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img src="" id="img"></img>
     <video id="video" controls autoplay></video>
     <script>
-        let request = "https://gateway.pinata.cloud/ipfs/QmTePxv4CxpoJ3T3c29hbAMtU6o6EmmLXaUupnQff3tHTb/"
+        let request = "https://bonjour-lab.mypinata.cloud/ipfs/QmTePxv4CxpoJ3T3c29hbAMtU6o6EmmLXaUupnQff3tHTb/"
         let id = 1;
 
         let imgContainer = document.getElementById("img");
